[workspace.package]

license = "MIT"
repository = "https://github.com/starlane-io/starlane.git"

version = "0.3.21"

edition = "2021" 
rust-version = "1.81.0"
authors = []
homepage = "https://starlane.io"
description="The Workspace package for Starlane.  What to see: './space' contains the "


[workspace]
default-run = "starlane"
resolver = "2"
members = ["main", "space", "hyperspace", "base","macros"]


#members = [
#  "main", "macros", "main-primitive-macros","mechtron"
#  , "main-space", "ext/service/main-cli-local-filestore-service" , "ext/service/main-cli-filestore-s3-service"]

exclude = [ ]

[workspace.dependencies]

starlane-space = { package="starlane-space", path="./space"}
starlane-base = { package="starlane-base", path="./base"}
starlane-hyperspace = { package="starlane-hyperspace", path="./hyperspace"}
starlane-macros = { package="starlane-macros", path= "macros", version = "0.3.20" }

lazy_static = "1.5.0"
uuid = { version="1.1.2" }
chrono = { version="0.4.19" }
tokio = "1.41.0"
tokio-util = "0.7.12"
tokio-rustls = "0.26.0"

bincode = "1.3.3"
#sqlx = { version = "0.5.11", features = [ "runtime-tokio-rustls", "postgres", "macros", "any" ] }
sqlx = "0.8.2"
strum = "0.26.3"
strum_macros = "0.26.4"
wasmer = "4.3.7"
wasmer-compiler-singlepass = "4.3.7"
wasmer-wasix = "0.27.0"
zip = "0.6.2"
dirs = "4.0.0"
ascii = "1.1.0"
url = "2.3.1"
once_cell = "1.20.0"
indexmap = "2.7.0"

syn = "2.0.90"
async-trait = "0.1.83"
futures = {version = "0.3.21", default-features = true }
dashmap = "5.3.4"
semver = { version="1.0.10", features=['serde'] }
eyre = "0.6.12"
miette = "7.4.0"

itertools = "0.13.0"

serde = "1.0.69"
async-recursion = "1.0.0"

rcgen = "0.13.1"
tls-api-rustls = "0.9.0"
rustls = "0.23.13"
rustls-pemfile = "2.1.3"

text_io = "0.1.12"
clap = "4.5.17"
walkdir = "2.3.2"

heck = "0.5.0"


# space
ariadne = "0.1.5"
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
regex = "1.5.4"
#http = "0.2.6"
#http-serde = "1.1.0"
serde_json = "1.0.79"
serde_with = "3.11.0"
erased-serde = "0.4.5"
inventory = "0.3.15"
typetag = "0.2.18"
serde_with_macros = "3.11.0"
#serde_json_any_key = "2.0.0"
bollard = "0.18.1"
serde_urlencoded = "0.7.1"
enum-ordinalize = "3.1.11"
dyn-clone = "1.0.17"
remote-trait-object = "0.5.0"
downcast-rs = "1.2.1"
validator = "0.15.0"
proc-macro-crate = "3.2.0"
threadpool = "1.8.1"
shadow-rs = "0.36.0"
convert_case = "0.6.0"

webpki-roots = "0.26.5"
anyhow = "1.0.92"
virtual-fs = "0.19.0"
bytes = "1.7.1"
crossterm = "0.28.1"
console = "0.15.8"

#syn = { version = "1.0", features = ["full"] }
quote = "1.0.37"
proc-macro2 = "1.0.92"
quinn = "0.11.5"
md-5 = "0.10.6"

thiserror = "1.0.63"
tempdir = "0.3.7"
path-clean = "1.0.1"
thiserror-context = "0.1.2"

rustyline = "14.0.0"
cliclack = "0.3.5"
derive_builder = "0.20.2"
pg-embed = "0.7.1"
serde_yaml = "0.9.33"
docker-compose-types = "0.15.0"
text-to-ascii-art = "0.1.10"
ctrlc = "3.4.5"
colored = "2.1.0"
lerp = "0.5.0"
atty = "0.2.14"
#rolling-file = "0.2.0"
termsize = "0.1.9"
textwrap = "0.16.1"
postgresql_embedded = "0.17.2"
port_check = "0.2.1"
function_name = "0.3.0"
derive-name = "1.1.0"
tokio-scoped = "0.2.0"
prettyplease = "0.2.25"
tracing-subscriber = "0.3.18"
tracing = "0.1.26"
tracing-attributes = "0.1.27"
tracing-core = "0.1.32"


log = { version = "0.4.17" }

