[workspace.package]

license = "MIT"
repository = "https://github.com/starlane-io/starlane.git"

edition = "2021"
rust-version = "1.81.0"
authors = []
homepage = "https://starlane.io"
description="The Workspace package for Starlane.  What to see: './space' contains the "
version="0.3.20"

[workspace]
default-run = "starlane"
resolver = "2"
members = ["main", "space", "hyperspace", "base/common","macros", "base/foundation/docker-desktop", "base/platform/registry/postgres"]

exclude = [ ]

[workspace.dependencies]

starlane-macros = { package="starlane-macros", path= "macros", version = "0.3.20" }
starlane-space = { package="starlane-space", path= "space", version = "0.3.20" }
starlane-hyperspace = { package="starlane-hyperspace", path= "hyperspace", version = "0.3.20" }
starlane-base = { package="starlane-base", path= "base/common", version = "0.3.20" }
starlane = { package="starlane", path="./main"}

lazy_static = "1.5.0"
uuid = { version="1.11.0" }
chrono = { version="0.4.39" }
tokio = "1.42.0"
tokio-rustls = "0.26.1"

bincode = "1.3.3"
sqlx = "0.8.2"
strum = "0.26.3"
strum_macros = "0.26.4"
#wasmer = "5.0.4"
#wasmer-wasix = "0.34.0"
zip = "2.2.2"
dirs = "5.0.1"
ascii = "1.1.0"
url = "2.5.4"
once_cell = "1.20.2"
indexmap = "2.7.0"

syn = "2.0.93"
async-trait = "0.1.83"
futures = {version = "0.3.31", default-features = true }
dashmap = "6.1.0"
semver = { version="1.0.24", features=['serde'] }
eyre = "0.6.12" # NOTE: add 'miette = "7.4.0"' for reporting later!
miette = "7.4.0"
itertools = "0.13.0"

serde = "1.0.217"
serde_derive = "1.0.217"
async-recursion = "1.1.1"

rcgen = "0.13.2"
rustls = "0.23.20"
rustls-pemfile = "2.2.0"

clap = "4.5.23"
walkdir = "2.5.0"

md5 = "0.7.0"
# space
#ariadne = "0.5.0"
ariadne = "0.1.5"
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
regex = "1.11.1"
serde_json = "1.0.134"
serde_with = "3.12.0"
typetag = "0.2.19"
serde_with_macros = "3.12.0"
serde_urlencoded = "0.7.1"
enum-ordinalize = "4.3.0"
dyn-clone = "1.0.17"
downcast-rs = "1.2.1"
validator = "0.19.0"

shadow-rs = "0.37.0"
convert_case = "0.6.0"

anyhow = "1.0.95"
crossterm = "0.28.1"
console = "0.15.10"

quote = "1.0.38"
proc-macro2 = "1.0.92"

thiserror = "2.0.9"
path-clean = "1.0.1"
thiserror-context = "0.1.2"

rustyline = "15.0.0"
cliclack = "0.3.5"
derive_builder = "0.20.2"
serde_yaml = "0.9.34"
text-to-ascii-art = "0.1.10"
ctrlc = "3.4.5"
colored = "2.2.0"
lerp = "0.5.0"
atty = "0.2.14"
termsize = "0.1.9"
textwrap = "0.16.1"
port_check = "0.2.1"
derive-name = "1.1.0"
tracing = "0.1.41"
tracing-core = "0.1.33"



