[package]
name = "starlane-macros"
description = "macros for starlane.io"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
doctest = false

[dependencies]
lazy_static = { workspace = true}
#syn = { workspace = true, features = ["full"] }
quote = { workspace = true}
proc-macro2 = {workspace = true, feature=["proc-macro"]}
deluxe ={ workspace = true }
nom-supreme = { workspace = true }
convert_case= {workspace = true}

derive_builder = { workspace = true }
syn = { workspace = true, features=["full"]}
