[workspace.package]

license = "MIT"
repository = "https://github.com/cosmic-initiative/cosmic-initiative.git"

version = "0.3.14"

edition = "2021" 
rust-version = "1.80.0"
authors = []
homepage = "https://starlane.io"
description="..."



[workspace]
resolver = "2"
members = [
  "starlane/*",
  "cosmic/*",
  "mechtron/*"  
  ]

exclude = [
  "cosmic/cosmic-cli","cosmic/src", "cosmic/cosmic-registry-postgres","cosmic/cosmic-hyperspace","cosmic/target", "starlane/starlane-old", "starlane/starlane-core", "starlane/starlane-macros","mechtron/mocks",  "mechtron/mocks/hello-goodbye", "cosmic/cosmic-hyperlane-quic", "driver"


]

[workspace.dependencies]
lazy_static = "1.5.0"
uuid = { version="1.1.2" }
chrono = { version="0.4.19" }
tokio = { version = "1.15.0" }
async-trait = "0.1.48"
ctrlc = "3.2.2"
bincode = "1.3.3"
sqlx = { version = "0.5.11", features = [ "runtime-tokio-rustls", "postgres", "macros", "any" ] }
strum = "0.24.1"
strum_macros = "0.24.1"
wasmer = "4.3.7"
wasmer-compiler-singlepass = "4.3.7"
wasmer-wasix = "0.27.0"
zip = "0.6.2"
dirs = "4.0.0"
ascii = "1.1.0"
url = "2.3.1"
once_cell = "1.20.0"
futures = {version = "0.3.21", default-features = true }
dashmap = "5.3.4"
semver = { version="1.0.10", features=['serde'] }


serde = "1.0.69"
tracing = "0.1.26"
async-recursion = "1.0.0"

rcgen = "0.9.3"
rustls = "0.20"
tokio-rustls = "0.23"
tls-api-rustls = "0.9.0"