[workspace.package]

license = "MIT"
repository = "https://github.com/cosmic-initiative/cosmic-initiative.git"

version = "0.3.14"

edition = "2021" 
rust-version = "1.80.0"
authors = []
homepage = "https://starlane.io"
description="..."



[workspace]
resolver = "2"
members = [
  "starlane", "starlane-macros", "starlane-primitive-macros","mechtron"
  ]

exclude = [ ]

[workspace.dependencies]
lazy_static = "1.5.0"
uuid = { version="1.1.2" }
chrono = { version="0.4.19" }
tokio = { version = "1.15.0" }
async-trait = "0.1.48"
ctrlc = "3.2.2"
bincode = "1.3.3"
sqlx = { version = "0.5.11", features = [ "runtime-tokio-rustls", "postgres", "macros", "any" ] }
strum = "0.24.1"
strum_macros = "0.24.1"
wasmer = "4.3.7"
wasmer-compiler-singlepass = "4.3.7"
wasmer-wasix = "0.27.0"
zip = "0.6.2"
dirs = "4.0.0"
ascii = "1.1.0"
url = "2.3.1"
once_cell = "1.20.0"
futures = {version = "0.3.21", default-features = true }
dashmap = "5.3.4"
semver = { version="1.0.10", features=['serde'] }


serde = "1.0.69"
tracing = "0.1.26"
async-recursion = "1.0.0"

rcgen = "0.9.3"
rustls = "0.20"
tokio-rustls = "0.23"
tls-api-rustls = "0.9.0"


text_io = "0.1.12"
clap = "3.2.22"
walkdir = "2.3.2"


# space
ariadne = "0.1.5"
nom = "7"
nom-supreme = "0.6.0"
nom_locate = "4.0.0"
regex = "1.5.4"
#http = "0.2.6"
#http-serde = "1.1.0"
serde_json = "1.0.79"
serde_urlencoded = "0.7.1"
enum-ordinalize = "3.1.11"
convert_case = "0.5.0"
validator = "0.15.0"

threadpool = "1.8.1"
oneshot = "0.1.5"


anyhow = "1.0.86"
virtual-fs = "0.16.0"
bytes = "1.7.1"


syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
quinn = "0.8.5"